fixed horizontal scrolling on tablet screen

--- a/src/App.css
+++ b/src/App.css
@@ -22,7 +22,8 @@ body{
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-overflow:scroll;
+overflow-y:scroll;
+overflow-x: hidden;
 }
 ::-webkit-scrollbar {
   width: 0;
